fix: исправить на проверяемое исключение и применить инструмент StringUtils. 2-ая итерация проверки.